tests/NormalTests/paczka1/fuzzy1/55254521.err
Error in line 11: QihwWrBna9X S839 41,1
Error in line 12: A115 A115 72,6
Error in line 17: kNC6CcvcLl A115 95,7
Error in line 22: kNC6CcvcLl S839 53,5
Error in line 13: 0ubO S158 160,1
Error in line 15: A115 S839 82,2
Error in line 25: 0ubO A149 84,1
Error in line 29: Z5cdlmj S8=9 91,8
Error in line 23: kNC6CcvcLl A115 39,7
Error in line 38: kNC6CcvcLl S158 95,4
